# gopvpsim

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER_NOTES.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
articles/: oinkologne-cd-2026-05.toml
comparisons/: aegislash-blade-vs-shield-ul.toml  aegislash-blade-vs-shield.toml  forretress-fast-move-shadow.toml  jumpluff-regular-vs-shadow.toml  ninetales-regular-vs-shadow.toml  oinkologne-male-vs-female.toml
docs/: TODO_archive.md  TODO_backlog.md  article_authoring_workflow.md  article_generator_design.md  article_schema.md  auto_gen_narrative_plan.md  concepts.md  corviknight_deep_dive_reference.md  dive_reading_guide.md  ml_guide_compare_plan.md  owned_mon_breakdown_plan.md  palette_governance.md  predive_checklist.md  pvpoke_bug_report_morpeko.md  pvpoke_bug_reports.md  pvpoke_divergences.md  reddit_launch_plan.md  ryanswag_how_to_deep_dive.txt  ryanswag_methodology_gap_analysis.md  s11_html_size_audit.md  spidops_deep_dive_reference.md  structured_logger_design.md  theme_rollout_status.md  threshold_schema.md  tinkaton_deep_dive_reference.md  topn_cup_filter_plan.md  verification_counts.toml
guides/: index.toml
opponent_pools/: active_variants.toml  cs_2026_orlando_all.txt  cs_2026_orlando_top32.txt  cs_2026_orlando_top8.txt  equinox_great.txt  gl_top30_plus_cs_top100.txt  gl_top50_plus_cs.txt  master_top60.txt  ul_top60.txt  ul_top60_plus_aegislash.txt
scripts/: analyze_deep_dive.py  audit_chargedlog_fixtures.py  audit_oracle_harness.py  augment_deep_dive.py  auto_gen_narrative.py  battle.py  bottle_cap_advisor.py  breakpoints.py  build_guides.py  build_matchup_web.py  build_opponent_pool.py  build_website_index.py  cache_base.py  chain_status.py  check_sableye_energy_lead.py  clean_logs.py  clean_ryanswag_dump.py  cmp_panels.js  compare_loadouts.py  corpus_new_decisions.py  corpus_policy_driver.py  deep_dive.py  deep_dive_analysis.py  deep_dive_card.py  deep_dive_engine.js  deep_dive_logging.py  deep_dive_matchup_clusters.py  deep_dive_narrative.py  deep_dive_rendering.py  deep_dive_signature.py  deep_dive_slayer.py  deep_dive_user_collection.js  dialga_origin_etm_analysis.py  energy_probe.py  etm_iv_floor_sweep.py  export_owned_breakdown_bundle.py  fast_move_class.py  fetch_dracoviz_tournament.py  format_md.py  gc_cache.py  (+56 more)
tests/: conftest.py  test_aggregate_flips_by_anchor.py  test_anchors.py  test_bandaid910_bestcm.py  test_bandaid929_nobait_divergence.py  test_battle.py  test_best_buddy_toggle.py  test_both_self_debuff_divergence.py  test_breakpoints.py  test_bug3_farm_stack.py  test_build_website_index.py  test_card_pole_tiebreak.py  test_cm_debuf_delta.py  test_compare_energy.py  test_data.py  test_deep_dive_card.py  test_deep_dive_plotly.py  test_display.py  test_dive_worker_form_change.py  test_efficiency.py  test_energy_lead.py  test_envelope_positions.py  test_evolution_lines.py  test_export_owned_breakdown.py  test_fast_move_class.py  test_fc1_aegislash_revert_energy.py  test_find_losses_vs_general.py  test_fire_now_cmp_shadow.py  (+43 more)
(+156 files in other folders)
