[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopvpsim"
version = "0.1.0"
description = "Pokemon Go PvP battle simulator with breakpoint/bulkpoint analysis"
requires-python = ">=3.13"
dependencies = [
    "certifi",
]

[project.optional-dependencies]
# Test/dev tooling. Install with `pip install -e .[dev]`.
dev = [
    "pytest",
]
# Optional numba acceleration for the pvpoke_dp inner loop.
# `src/gopvpsim/_dp_jit.py` is written to fall back to a pure-Python loop
# if numba is not importable, so this is genuinely optional.
# Install with `pip install -e .[perf]`.
perf = [
    "numba",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gopvpsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires network access or a warm cache (pvpoke gamemaster)",
]
