[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopvpsim"
version = "0.1.0"
description = "Pokemon Go PvP battle simulator with breakpoint/bulkpoint analysis"
requires-python = ">=3.13"
dependencies = [
    "certifi",
    "markdown",  # scripts/build_guides.py renders the Reader's Guide pages
    "numpy",     # vectorised aggregator hot paths in scripts/deep_dive_analysis.py
]

[project.optional-dependencies]
# Test/dev tooling. Install with `pip install -e .[dev]`.
dev = [
    "pytest",
]
# Optional numba acceleration for the pvpoke_dp inner loop.
# `src/gopvpsim/_dp_jit.py` is written to fall back to a pure-Python loop
# if numba is not importable, so this is genuinely optional.
# Install with `pip install -e .[perf]`.
#
# The cap on x86_64 macOS is a wheel-availability workaround, not a code
# requirement: numba/llvmlite dropped Intel-Mac (x86_64 darwin) wheels after
# numba 0.62.1 / llvmlite 0.45.1, so newer versions would try to build llvmlite
# from source (needs cmake + a matching LLVM). Every other platform (Linux,
# Apple-Silicon macOS) stays on the newest numba, which still ships wheels.
perf = [
    "numba; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numba<0.63; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gopvpsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires network access or a warm cache (pvpoke gamemaster)",
    "slow: takes more than ~10s; iterate with -m 'not slow', but the full suite (no -m filter) remains the pre-commit gate",
]
